<resources>
    <string name="app_name">SchoolManagement</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="channelName">New class !</string>
    <string name="channelDescription">A new class has been created ! You should click here and see if you want to apply for this class !</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="captcha">Captcha</string>
    <string name="action_settings">Settings</string>
    <string name="action_infos">Infos</string>
    <string name="welcome">Welcome</string>
    <string name="result">Results of Search</string>
    <string name="modifyClass">Modify this class</string>
    <string name="EnterName">Enter the name</string>
    <string name="EnterRoom">Enter the room</string>
    <string name="EnterLocation">Enter the location</string>
    <string name="EnterTeacher">Enter the teacher</string>
    <string name="EnterBegin">Enter the beginning time</string>
    <string name="EnterEnd">Enter the ending time</string>
    <string name="EnterFirstname">Enter firstname</string>
    <string name="EnterLastname">Enter lastname</string>
    <string name="EnterBirthdate">Enter birth date</string>
    <string name="title_activity_settings">Settings</string>
    <string name="adresseHES1">Haute Ecole de Gestion</string>
    <string name="adresseHES2">Route de la Plaine 2</string>
    <string name="adresseHES3">Case Postale 80</string>
    <string name="adresseHES4">3960 Sierre</string>
    <string name="labelTel">Phone number : </string>
    <string name="labelMail">Mail : </string>
    <string name="telHES">+41 27 606 89 11</string>
    <string name="mailHES">info@hevs.ch</string>
    <string name="cleApi">AIzaSyCvy67OToFF9S7OHwzbrQp_KV-qsrNmak0</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
