<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateClass">

    <!-- salut -->

    <Button
        android:id="@+id/createClass"
        android:layout_width="1080px"
        android:layout_height="120dp"
        android:text="Create"
        android:textSize="30sp"
        android:onClick="createMyClass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_name_class"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="Name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_room_class"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="N° Room"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_class" />

    <TextView
        android:id="@+id/tv_location_class"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="Location"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_room_class" />

    <TextView
        android:id="@+id/tv_teacher_class"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="Teacher"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_class" />

    <TextView
        android:id="@+id/tv_begintime_class"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="BeginTime"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_teacher_class" />

    <TextView
        android:id="@+id/tv_endtime_class"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="EndTime"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_begintime_class" />

    <EditText
        android:id="@+id/name_class"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/EnterName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tv_name_class"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/room_class"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/EnterRoom"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tv_room_class"
        app:layout_constraintTop_toBottomOf="@+id/name_class" />

    <EditText
        android:id="@+id/location_class"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/EnterLocation"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tv_location_class"
        app:layout_constraintTop_toBottomOf="@+id/room_class" />

    <EditText
        android:id="@+id/teacher_class"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/EnterTeacher"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tv_teacher_class"
        app:layout_constraintTop_toBottomOf="@+id/location_class" />

    <EditText
        android:id="@+id/beginTime_class"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/EnterBegin"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/tv_begintime_class"
        app:layout_constraintTop_toBottomOf="@+id/teacher_class" />

    <EditText
        android:id="@+id/endTime_class"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/EnterEnd"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/tv_endtime_class"
        app:layout_constraintTop_toBottomOf="@+id/beginTime_class" />

</android.support.constraint.ConstraintLayout>