<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateClass">


    <TextView
        android:id="@+id/tvd_firstname_student"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="Firstname"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvd_lastname_student"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Lastname"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvd_firstname_student" />

    <TextView
        android:id="@+id/tvd_birthdate_student"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Birthdate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvd_lastname_student" />

    <TextView
        android:id="@+id/tvd_picture_student"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Picture"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvd_birthdate_student" />


    <EditText
        android:id="@+id/d_firstname"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/EnterFirstname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvd_firstname_student"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/d_lastname"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/EnterLastname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvd_lastname_student"
        app:layout_constraintTop_toBottomOf="@+id/d_firstname" />

    <EditText
        android:id="@+id/d_birthdate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/EnterBirthdate"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/tvd_birthdate_student"
        app:layout_constraintTop_toBottomOf="@+id/d_lastname" />


</android.support.constraint.ConstraintLayout>