<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyStudent">

    <Button
        android:id="@+id/createClass"
        android:layout_width="1080px"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:onClick="modifyStudent"
        android:text="Save"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/firstname_student"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="Firstname"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastname_student"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="Lastname"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_student" />

    <TextView
        android:id="@+id/birthdate_student"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="Birthdate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname_student" />


    <EditText
        android:id="@+id/text_firtname_student"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/EnterFirstname"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/firstname_student"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_lastname_student"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/EnterLastname"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/lastname_student"
        app:layout_constraintTop_toBottomOf="@+id/text_firtname_student" />

    <EditText
        android:id="@+id/text_birthdate_student"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/EnterBirthdate"
        android:inputType="date"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/birthdate_student"
        app:layout_constraintTop_toBottomOf="@+id/text_lastname_student" />

    <ListView
        android:id="@+id/listforModifyStudentByFKStudent"

        android:layout_width="wrap_content"
        android:layout_height="394dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdate_student"
        tools:listitem="@layout/class_by_fk_student_item" />


</android.support.constraint.ConstraintLayout>
</ScrollView>